# git-sage

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  test_bad_code.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: architecture.md  changelog.md  contributing.md  implementation.md  installation.md  intro.md  usage.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
git_sage/: __init__.py  cli.py  diff.py  hook.py  ollama.py  output.py  parser.py  prompt.py
tests/: test_diff.py  test_parser.py  test_prompt.py
